--- a/workshop/exercise-2/style.css
+++ b/workshop/exercise-2/style.css
@@ -1,15 +1,17 @@
 p {
-
+    margin: 0;
 }
 
 .one {
-
+    background: pink;
+    
 }
-
 .two {
-
+    background: fuchsia;
+    
 }
 
 .three {
-
+    font-size: 5em;
+    
 }
