--- a/workshop/exercise-7/style.css
+++ b/workshop/exercise-7/style.css
@@ -10,3 +10,57 @@ html, body, div, h1, h2, p, ul, li {
 }
 
 /* ADD CSS BELOW */
+body {
+	position: relative;
+    height: 400px;
+	border: 0px solid;
+	font-family: 'Bangers', cursive;
+}
+
+.centered {
+	text-align: center;
+	padding: 3%;
+}
+
+h1 {
+	font-size: xx-large;
+}
+
+h3 {
+	font-size: small;
+	margin-bottom: 0;
+}
+
+h2 {
+	font-size: medium;
+	text-align: left;
+	margin-left: 10px;
+}
+
+.row {
+	display: flex;
+	flex-wrap: nowrap;
+	flex-direction: row;
+	align-items: left;
+	list-style-type: none;
+}
+
+.col {
+	border: dashed black 1px;
+	padding: 10px;
+	background-color: #eaeaee;
+	margin: 10px;
+}
+
+.image {
+	max-height: 80px;
+	border: 0;
+	padding: 0px;
+	background-color: #eaeaee;
+	margin: 2px;
+	/*display: flex;
+	flex-wrap: nowrap;
+	flex-direction: row;
+	align-items: flex-start;
+	justify-content: space-between;*/
+}
