--- a/workshop/exercise-7/style.css
+++ b/workshop/exercise-7/style.css
@@ -11,7 +11,7 @@ html, body, div, h1, h2, p, ul, li {
 
 /* ADD CSS BELOW */
 body {
-	position: relative;
+
     height: 400px;
 	border: 0px solid;
 	font-family: 'Bangers', cursive;
@@ -19,16 +19,17 @@ body {
 
 .centered {
 	text-align: center;
-	padding: 3%;
+	padding: 10px;
+	max-width: 1000px;
 }
 
 h1 {
 	font-size: xx-large;
 }
 
-h3 {
+.h3 {
 	font-size: small;
-	margin-bottom: 0;
+	padding-top: 20px;
 }
 
 h2 {
@@ -53,14 +54,22 @@ h2 {
 }
 
 .image {
-	max-height: 80px;
+	max-height: 110px;
 	border: 0;
 	padding: 0px;
 	background-color: #eaeaee;
 	margin: 2px;
+	border-radius: 5px;
 	/*display: flex;
 	flex-wrap: nowrap;
 	flex-direction: row;
 	align-items: flex-start;
 	justify-content: space-between;*/
+}
+
+h3 {
+	padding: 0px;
+	margin-bottom: 0;
+	margin-top: 0;
+	display: flex;
 }
