--- a/workshop/exercise-9/style.css
+++ b/workshop/exercise-9/style.css
@@ -3,18 +3,27 @@ img {
   }
   
   .img1 {
-  
+    position: absolute;
+    padding: 5px;
+    z-index: 1;
   }
   
   .img2 {
-  
+    position: absolute;
+    z-index: 0;
   }
   
   .img3 {
-  
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    z-index: 0;
   }
   
   .img4 {
-  
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    z-index: 1;
   }
   
